--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "expo": "^46.0.0",
+    "faker": "^6.6.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
