--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.1",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "^46.0.0",
@@ -7,7 +8,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.7",
+    "redux": "^4.2.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
