--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "^46.0.0",
@@ -11,6 +12,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "typescript": "^4.8.4"
   },
